add new routes for projects app

--- a/TaskManager/projects/templates/projects/project_form.html
+++ b/TaskManager/projects/templates/projects/project_form.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Create project</title>
 </head>
 <body>
-
+    <h1>Create project</h1>
 </body>
 </html>
