add templates and views for projects app

--- a/TaskManager/projects/templates/projects/project_form.html
+++ b/TaskManager/projects/templates/projects/project_form.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Create project</title>
-</head>
-<body>
-    <h1>Create project</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+	<h1>Форма создания проекта</h1>
+{% endblock %}
