--- a/TaskManager/projects/templates/projects/project.html
+++ b/TaskManager/projects/templates/projects/project.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Project</title>
-</head>
-<body>
-    <h1>Project</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+	<h1>Проект</h1>
+{% endblock %}
