--- a/TaskManager/projects/templates/projects/projects_list.html
+++ b/TaskManager/projects/templates/projects/projects_list.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Projects</title>
-</head>
-<body>
-    <h1>Projects</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+	<h1>Список проектов</h1>
+{% endblock %}
