--- a/TaskManager/tasks/templates/tasks/task_form.html
+++ b/TaskManager/tasks/templates/tasks/task_form.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Create Task</title>
-</head>
-<body>
-    <h1>Create Task</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+	<h1>Создание задачи</h1>
+{% endblock %}
