--- a/TaskManager/tasks/templates/tasks/tasks_list.html
+++ b/TaskManager/tasks/templates/tasks/tasks_list.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Tasks</title>
-</head>
-<body>
-    <h1>Tasks</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+	<h1>Список задач</h1>
+{% endblock %}
