chore: add static import in base template

--- a/TaskManager/templates/base.html
+++ b/TaskManager/templates/base.html
@@ -5,11 +5,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
+        <link rel="stylesheet" href="{% static 'projects/css/styles.css' %}">
+        <script src="{% static 'projects/js/index.js' %}"></script>
     </head>
 
     <body>
         {% include 'navbar.html' %}
-{#        <img src="{% static 'projects/1.jpg' %}" alt="!!!">#}
+        <h1 class="test">ААААААА</h1>
 
         {% block content %}
 
