chore: small changes in templates

--- a/TaskManager/templates/base.html
+++ b/TaskManager/templates/base.html
@@ -11,7 +11,7 @@
 
     <body>
         {% include 'navbar.html' %}
-        <h1 class="test">ААААААА</h1>
+{#        <h1 class="test">TEST STYLES</h1>#}
 
         {% block content %}
 
