--- a/TaskManager/notification/templates/notification/notifications_list.html
+++ b/TaskManager/notification/templates/notification/notifications_list.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Notifications</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
     <h1>Notifications</h1>
-</body>
-</html>
+{% endblock %}
