--- a/TaskManager/projects/templates/projects/project_form.html
+++ b/TaskManager/projects/templates/projects/project_form.html
@@ -2,5 +2,5 @@
 {% load static %}
 
 {% block content %}
-	<h1>Форма создания проекта</h1>
+	<h1>Форма для создания нового проекта</h1>
 {% endblock %}
