--- a/TaskManager/user/templates/user/login_register.html
+++ b/TaskManager/user/templates/user/login_register.html
@@ -2,5 +2,8 @@
 {% load static %}
 
 {% block content %}
-	<h1>Регистрация/Вход</h1>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+    </form>
 {% endblock %}
