--- a/TaskManager/templates/navbar.html
+++ b/TaskManager/templates/navbar.html
@@ -7,6 +7,7 @@
         <a href="{% url 'app_projects:main' %}">Главная</a>
         <a href="{% url 'app_tasks:tasks_list' %}">Задачи</a>
         <a href="{% url 'app_projects:projects_list' %}">Проекты</a>
-        <a href="{% url 'app_user:login' %}">Регистрация/Вход</a>
+        <a href="{% url 'app_user:login' %}">Вход</a>
+        <a href="{% url 'app_user:register' %}">Регистрация</a>
     </div>
 </header>
