--- a/TaskManager/notification/templates/notification/notifications_list.html
+++ b/TaskManager/notification/templates/notification/notifications_list.html
@@ -2,5 +2,9 @@
 {% load static %}
 
 {% block content %}
-    <h1>Notifications</h1>
+    <ul>
+        {% for notification in notifications %}
+        	<li>{{ notification }}</li>
+        {% endfor %}
+    </ul>
 {% endblock %}
