--- a/TaskManager/projects/templates/projects/main.html
+++ b/TaskManager/projects/templates/projects/main.html
@@ -2,6 +2,24 @@
 {% load static %}
 
 {% block content %}
-	<h1>Main Page</h1>
-    <a href="{% url 'app_projects:create_project' %}">Создать проект</a>
+    <section class="features-section">
+        <div class="features-text">
+            <h2>Организовывайте свои задачи <br> и проекты с <strong>Task Manager</strong></br></h2>
+            <ul class="features-list">
+                <li>Управление задачами</li>
+                <li>Возможность расстановки <br> приоритетов задач</br></li>
+                <li>Установка сроков для проектов</li>
+                <li>Уведомления о <br>приближающихся задачах</br></li>
+                <li>Комментарии к задачам и <br>проектам</br></li>
+            </ul>
+            <div class="features-img">
+                <img class="feat-img" src="{% static 'projects/images/pic1.jpg' %}" alt="Feature Image" />
+            </div>
+
+            <div class="features-buttons">
+                <button class="btn-primary" onclick="location.href='task.html'">Создать задачу</button>
+                <button class="btn-primary">Создать проект</button>
+            </div>
+        </div>
+    </section>
 {% endblock %}
