--- a/TaskManager/user/templates/user/login_register.html
+++ b/TaskManager/user/templates/user/login_register.html
@@ -1,14 +1,52 @@
-{% extends 'base.html' %}
-{% load static %}
+{% extends 'base.html' %} {% load static %} {% block content %}
+<section class="auth-section">
+    <div class="auth-image">
+        <img src="{% static 'user/images/main.jpg' %}" alt="Welcome Image" />
+    </div>
 
-{% block content %}
-    {% if page == 'register' %}
-        <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-    </form>
-    {% else %}
-        <h1>Логин</h1>
-    {% endif %}
-
+    <div class="auth-form">
+        {% if page == 'register' %}
+        <h2>Создайте аккаунт</h2>
+        <p>Введите ваши данные</p>
+        <form method="POST" action="{% url 'app_projects:main' %}">
+            {% csrf_token %}
+            <input type="text" placeholder="Имя" required />
+            <input
+                type="email"
+                placeholder="Адрес электронной почты"
+                required
+            />
+            <input type="password" placeholder="Пароль" required />
+            <input type="password" placeholder="Подтвердите пароль" required />
+            <button type="submit" class="btn-primary">Создать аккаунт</button>
+        </form>
+        <div class="register-row">
+            <p>Есть аккаунт?</p>
+            <a href="{% url 'app_user:login' %}">Войти</a>
+        </div>
+        {% else %}
+        <h2>Войдите в аккаунт</h2>
+        <p>Введите ваши данные</p>
+        <form id="loginForm" method="POST" action="{% url 'app_user:login' %}">
+            <input
+                type="email"
+                id="email"
+                placeholder="Адрес электронной почты"
+                required
+            />
+            <input
+                type="password"
+                id="password"
+                placeholder="Пароль"
+                required
+            />
+            <button type="submit" class="btn-primary">Войти</button>
+        </form>
+        <div class="register-row">
+            <p>Нет аккаунта?</p>
+            <a href="{% url 'app_user:register' %}">Зарегистрироваться</a>
+        </div>
+        {% endif %}
+    </div>
+</section>
 {% endblock %}
