fix notif button

--- a/TaskManager/tasks/templates/tasks/task.html
+++ b/TaskManager/tasks/templates/tasks/task.html
@@ -1,5 +1,6 @@
+{% extends 'base.html' %} {% load static %}
 <!DOCTYPE html>
-{% extends 'base.html' %} {% load static %} {% block content %}
+{% block content %}
 <section class="tasks-section">
     <h2>Мои задачи:</h2>
     <div class="tasks-container" id="tasksContainer">
