--- a/TaskManager/templates/navbar.html
+++ b/TaskManager/templates/navbar.html
@@ -2,12 +2,8 @@
 
 <header class="navbar">
     <div class="navbar-logo">
-        <a href="{% url 'app_user:register' %}">
-            <img
-                class="navbar-logo-img"
-                src="{% static 'projects/images/notif.jpg' %}"
-                alt="Logo"
-            />
+        <a href="{% url 'app_notification:notifications' %}">
+            <img class="navbar-logo-img" src="{% static 'projects/images/notif.jpg' %}" alt="Logo" />
         </a>
         <a href="{% url 'app_user:register' %}">
             <span>Task Manager</span>
