--- a/TaskManager/projects/static/projects/css/styles.css
+++ b/TaskManager/projects/static/projects/css/styles.css
@@ -414,3 +414,42 @@ h2 {
     font-size: 16px;
     margin-top: 10px;
 }
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap');
+
+.notifications-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 20px;
+    font-family: 'Inter', sans-serif;
+}
+
+.notif-title {
+    font-size: 32px;
+    font-weight: 600;
+    color: #444;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.notifications-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* выравнивание по центру */
+    gap: 20px;
+    width: 100%;
+}
+
+
+.notification-box {
+    border: 1px solid #e58a8a;
+    border-radius: 6px;
+    padding: 20px 550px;
+    background: #fff;
+    color: #444c5e;
+    font-size: 16px;
+    font-weight: 300;
+    text-align: center;
+    display: block;
+}
+
