--- a/TaskManager/templates/navbar.html
+++ b/TaskManager/templates/navbar.html
@@ -3,11 +3,14 @@
 <header class="navbar">
     <div class="navbar-logo">
         <a href="{% url 'app_notification:notifications' %}">
-            <img class="navbar-logo-img" src="{% static 'projects/images/notif.jpg' %}" alt="Logo" />
+            <img
+                class="navbar-logo-img"
+                src="{% static 'projects/images/notif.jpg' %}"
+                alt="Logo"
+            />
         </a>
         <a href="{% url 'app_user:register' %}">
             <span>Task Manager</span>
-            {# TODO: Редирект на страницу "главная" #}
         </a>
     </div>
     <nav class="navbar-menu">
