feat: add all static files

--- a/TaskManager/templates/base.html
+++ b/TaskManager/templates/base.html
@@ -6,7 +6,14 @@
         <meta charset="UTF-8">
         <title>Title</title>
         <link rel="stylesheet" href="{% static 'projects/css/styles.css' %}">
+        <link rel="stylesheet" href="{% static 'notification/css/styles.css' %}">
+        <link rel="stylesheet" href="{% static 'tasks/css/styles.css' %}">
+        <link rel="stylesheet" href="{% static 'user/css/styles.css' %}">
+
         <script src="{% static 'projects/js/index.js' %}"></script>
+        <script src="{% static 'notification/js/index.js' %}"></script>
+        <script src="{% static 'tasks/js/index.js' %}"></script>
+        <script src="{% static 'user/js/index.js' %}"></script>
     </head>
 
     <body>
