--- a/TaskManager/templates/navbar.html
+++ b/TaskManager/templates/navbar.html
@@ -14,6 +14,11 @@
         <a href="{% url 'app_projects:main' %}">Главная</a>
         <a href="{% url 'app_tasks:tasks_list' %}">Задачи</a>
         <a href="{% url 'app_projects:projects_list' %}">Проекты</a>
-        <a href="{% url 'app_user:register' %}">Регистрация/Вход</a>
+        {% if request.user.is_authenticated %}
+            <a href="{% url 'app_user:profile' %}"><img src="{% static 'images/user_profile.svg' %}" style="max-height: 35px" alt=""></a>
+        {% else %}
+            <a href="{% url 'app_user:register' %}">Регистрация/Вход</a>
+        {% endif %} 
+        
     </nav>
 </header>
