--- a/TaskManager/user/templates/user/profile.html
+++ b/TaskManager/user/templates/user/profile.html
@@ -3,4 +3,7 @@
 
 {% block content %}
 	<h1>Страница профиля</h1>
+    {# TODO: добавить кнопку для выхода пользователя из системы #}
+    <h2>Ваш никнейм: {{ user }}</h2>
+    <h2>Ваш адрес электронной почты: {{ user.email }}</h2>
 {% endblock %}
