--- a/TaskManager/projects/templates/projects/main.html
+++ b/TaskManager/projects/templates/projects/main.html
@@ -18,8 +18,7 @@
             </div>
 
             <div class="features-buttons">
-                {# TODO: Исправить переход на страницу task_form #}
-                <a href="{% url 'app_tasks:task_form' %}" class="btn-primary">Создать задачу</a>
+                <a href="{% url 'app_tasks:task_create' %}" class="btn-primary">Создать задачу</a>
                 <button class="btn-primary">Создать проект</button>
             </div>
         </div>
