--- a/TaskManager/projects/templates/projects/project_form.html
+++ b/TaskManager/projects/templates/projects/project_form.html
@@ -3,4 +3,9 @@
 
 {% block content %}
 	<h1>Форма для создания нового проекта</h1>
+    {% for field in form %}
+    	{{ field.label }}
+        {{ field }}
+    {% endfor %}
+
 {% endblock %}
